--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-web": "~0.18.11",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
