--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-animate": "^1.5.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "^1.4.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
