--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@heroicons/react": "^2.0.17",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
@@ -18,20 +20,21 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "^0.71.6",
     "react-native-animate": "^1.5.0",
     "react-native-heroicons": "^3.2.0",
-    "react-native-maps": "^1.4.0",
+    "react-native-maps": "1.3.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-react": "^7.18.6",
     "tailwindcss": "^3.3.0"
   },
   "private": true
