--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "node": "^19.8.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.6",
